2004-02-05  Tim Jenness  <timj@jach.hawaii.edu>

	* t/2_votable.t: Now attempt to skip VOtable tests if the VOTable
	module is not installed.

2004-02-05  Brad Cavanagh <b.cavanagh@jach.hawaii.edu>

        * Added STL support (read only) as a pluggable IO module
          along with associated test harness.

2003-11-14  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.2)

        * README: Updated location of VOTable module package, which
          moved. 

2003-10-30  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.1)

        * IO/Cluster.pm: Added read support for new style character
          quality flags. Cluster files are still written using the
          old style numeric flags.
          
2003-10-17  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.5.0)

        * IO/VOTable.pm: Very simple VOTable reader added, should
          now get at least basic information into the Astro::Catalog
          object if it is passed a VOTable.
          
        * t/2_votable.t: Added test harness for reading VOTables.  

        * Minor documenation cleanup in various files, no actual
          functionality changes.
          
2003-10-16  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.4.0)

        * IO/VOTable.pm: Fixed VOTable output to actually have some
          meta-data, now readable by treeview. Added DEFINITIONS
          element to the table and filled in various "default"
          meta-data. The tables are not bogus, but the epoch and
          equinoxes may be incorrect in some cases (SuperCOSMOS
          catalogues for instance).
          
2003-10-13  Alasdair Allan <aa@astro.ex.ac.uk> (Version 3.3.0)

        * Added VOTable support (write only) as a pluggable IO module
          along with associated test harness.
          
2003-09-30  Alasdair Allan <aa@astro.ex.ac.uk>

        * Query/Query/Sesame.pm: Modified to cope with change in return
          format by CDS. 
                  
2003-09-24  Alasdair Allan <aa@astro.ex.ac.uk>
